--- a/jenkins.yml
+++ b/jenkins.yml
@@ -42,7 +42,13 @@ spec:
         command: 
           - /bin/sh
           - -c
-          - cp /etc/secret-volume/ssh-privatekey ~/.ssh/id_rsa;cp /etc/secret-volume/ssh-publickey ~/.ssh/id_rsa.pub;chmod 400 ~/.ssh/*;printf "host github.com\n HostName github.com\n IdentityFile ~/.ssh/id_rsa\n User jenkins" > ~/.ssh/config;ssh-keyscan github.com >> ~/.ssh/known_hosts;cd /usr/share/jenkins/ref && git clone -b yml_jobs git@github.com:ikhripunov/connect-jenkins-bootstrap.git
+          - cp /etc/secret-volume/ssh-privatekey ~/.ssh/id_rsa;
+            cp /etc/secret-volume/ssh-publickey ~/.ssh/id_rsa.pub;
+            chmod 400 ~/.ssh/*;
+            printf "host github.com\n HostName github.com\n IdentityFile ~/.ssh/id_rsa\n User jenkins" > ~/.ssh/config;
+            ssh-keyscan github.com >> ~/.ssh/known_hosts;
+            cd /usr/share/jenkins/ref;
+            git clone -b yml_jobs git@github.com:ikhripunov/connect-jenkins-bootstrap.git
         volumeMounts:
         - mountPath: /usr/share/jenkins/ref
           name: ref-volume
@@ -75,7 +81,11 @@ spec:
         command:
           - /bin/sh
           - -c
-          - cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/config.xml.override /usr/share/jenkins/ref/config.xml.override && /usr/share/jenkins/ref/connect-jenkins-bootstrap/scripts/hack-jenkins-env.sh && mkdir /usr/share/jenkins/ref/init.groovy.d && cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/scripts/security.groovy /usr/share/jenkins/ref/init.groovy.d/security.groovy && cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/credentials.xml.override /usr/share/jenkins/ref/credentials.xml.override
+          - mkdir /usr/share/jenkins/ref/init.groovy.d;
+            cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/config.xml.override /usr/share/jenkins/ref/config.xml.override;
+            cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/credentials.xml.override /usr/share/jenkins/ref/credentials.xml.override;
+            cp /usr/share/jenkins/ref/connect-jenkins-bootstrap/scripts/security.groovy /usr/share/jenkins/ref/init.groovy.d/security.groovy;
+            /usr/share/jenkins/ref/connect-jenkins-bootstrap/scripts/hack-jenkins-env.sh;
         volumeMounts:
         - mountPath: /usr/share/jenkins/ref
           name: ref-volume
