--- a/jenkins.yml
+++ b/jenkins.yml
@@ -26,7 +26,7 @@ spec:
           failureThreshold: 5
         env:
         - name: JAVA_OPTS
-          value: "-Djenkins.install.runSetupWizard=false"
+          value: "-Djenkins.install.runSetupWizard=false -Dpermissive-script-security.enabled=NO_SECURITY"
         volumeMounts:
         - mountPath: /usr/share/jenkins/ref
           name: ref-volume
