Change init container git to pull from master
Get the init container to pull from the ClearPointNZ repo's master
branch.

Issue(s): None

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -48,7 +48,8 @@ spec:
             printf "host github.com\n HostName github.com\n IdentityFile ~/.ssh/id_rsa\n User jenkins" > ~/.ssh/config;
             ssh-keyscan github.com >> ~/.ssh/known_hosts;
             cd /usr/share/jenkins/ref;
-            git clone -b sidecar-dind git@github.com:ikhripunov/connect-jenkins-bootstrap.git
+            git clone git@github.com:ClearPointNZ/connect-jenkins-bootstrap.git
+
         volumeMounts:
         - mountPath: /usr/share/jenkins/ref
           name: ref-volume
